# msdf-atlas-gen

./: .gitmodules  CMakeLists.txt
msdf-atlas-gen/: GridAtlasPacker.cpp  RectanglePacker.cpp  TightAtlasPacker.cpp  image-encode.cpp  image-save.hpp
